[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/StorybookScene.gd" type="Script" id=1]
[ext_resource path="res://Assets/StoryBookBlank.PNG" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Parts/Eyes/999_eyes.PNG" type="Texture" id=4]
[ext_resource path="res://Assets/Parts/Defaults/Head.PNG" type="Texture" id=5]
[ext_resource path="res://Assets/Parts/Nose/z-default_nose.PNG" type="Texture" id=6]
[ext_resource path="res://Assets/Parts/Outfit/z-default_outfit.PNG" type="Texture" id=7]
[ext_resource path="res://Assets/Parts/Mouth/z-default_mouth.PNG" type="Texture" id=8]
[ext_resource path="res://Assets/Parts/Hair/z-default_hair.PNG" type="Texture" id=9]
[ext_resource path="res://Assets/gui_themes/next_buttons.tres" type="Theme" id=10]

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
margin_right = 1280.0
margin_bottom = 854.0
script = ExtResource( 1 )

[node name="StoryBookBlank" type="Sprite" parent="."]
scale = Vector2( 0.838107, 0.897756 )
texture = ExtResource( 2 )
centered = false

[node name="Baby" type="Node2D" parent="."]
position = Vector2( 380, 457 )
scale = Vector2( 0.35, 0.35 )

[node name="Hair" type="Sprite" parent="Baby"]
z_index = 6
texture = ExtResource( 9 )

[node name="Eyes" type="Sprite" parent="Baby"]
z_index = 4
texture = ExtResource( 4 )

[node name="Nose" type="Sprite" parent="Baby"]
z_index = 3
texture = ExtResource( 6 )

[node name="Mouth" type="Sprite" parent="Baby"]
z_index = 2
texture = ExtResource( 8 )

[node name="HeadCircle" type="Sprite" parent="Baby"]
z_index = 1
texture = ExtResource( 5 )

[node name="Outfit" type="Sprite" parent="Baby"]
texture = ExtResource( 7 )

[node name="StoryText" type="Label" parent="."]
margin_left = 671.0
margin_top = 87.0
margin_right = 1102.0
margin_bottom = 744.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Hello World what's going on?"
align = 1
valign = 1
autowrap = true

[node name="PageEven" type="Label" parent="."]
margin_left = 167.0
margin_top = 728.0
margin_right = 181.0
margin_bottom = 793.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "2"
align = 1
valign = 1

[node name="PageOdd" type="Label" parent="."]
margin_left = 1087.0
margin_top = 731.0
margin_right = 1101.0
margin_bottom = 796.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "3"
align = 1
valign = 1

[node name="SaveButton" type="Button" parent="."]
margin_left = 1014.0
margin_top = 83.0
margin_right = 1114.0
margin_bottom = 133.0
rect_min_size = Vector2( 100, 50 )
theme = ExtResource( 10 )
text = "Save"

[connection signal="pressed" from="SaveButton" to="." method="_on_Button_pressed"]
